# bevy_mujoco

./: .gitmodules  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yaml  release.yaml
assets/mjcf/: simple_1.xml  simple_2.xml  simple_3.xml  simple_4.xml
assets/urdf/: sample.urdf
examples/: list_model_elements.ipynb  mujoco_meshes.rs  scene.rs  unitree_a1_walk.rs
python/: a1.ipynb
src/: adapters.rs  lib.rs  mujoco_shape.rs  wrappers.rs
wasm/: index.html
