[package]
name = "bevy_mujoco"
version = "0.0.3"
edition = "2021"
license = "MIT OR Apache-2.0"
resolver = "2"
description = "Use MuJoCo physics and MCJF / URDF scenes in bevy"
keywords = ["mujoco", "bevy", "physics", "robotics"]
repository = "https://github.com/stillonearth/bevy_rl"

[dependencies]
arrayvec = "0.7.2"
bevy = "0.9.0"
mujoco-rust = { git = "https://github.com/stillonearth/MuJoCo-Rust.git", rev = "67f4dd7" }
trees = "0.4.1"
serde = { version = "1", features = ["derive"] }
itertools = "0.10.5"
nalgebra = "0.31.4"

[dev-dependencies]
rand = "0.8.5"
bevy_flycam = "0.9.0"
bevy-inspector-egui = { version = "0.15.0" }
