[package]
name = "bevy_mujoco"
version = "0.14.0"
edition = "2021"
license = "MIT OR Apache-2.0"
resolver = "2"
description = "Use MuJoCo physics and MCJF / URDF scenes in bevy"
keywords = ["mujoco", "bevy", "physics", "robotics"]
repository = "https://github.com/stillonearth/bevy_mujoco"

[dependencies]
mujoco-rust = { version = "0.0.6" }
arrayvec = "0.7.2"
bevy = "0.14.0-"
trees = "0.4.1"
serde = { version = "1", features = ["derive"] }
itertools = "0.13.0"
nalgebra = "0.32.2"

[dev-dependencies]
rand = "0.8.5"
bevy_flycam = { git = "https://github.com/stillonearth/bevy_flycam.git", rev = "f5aa9c5" }
