[package]
name = "bevy_mujoco"
version = "0.16.0"
edition = "2021"
license = "MIT OR Apache-2.0"
resolver = "2"
description = "Use MuJoCo physics and MCJF / URDF scenes in bevy"
keywords = ["mujoco", "bevy", "physics", "robotics"]
repository = "https://github.com/stillonearth/bevy_mujoco"

[dependencies]
mujoco-rust = { git = "https://github.com/stillonearth/MuJoCo-Rust.git", rev = "27d4500" }
arrayvec = "0.7.2"
bevy = "0.16"
trees = "0.4.1"
serde = { version = "1", features = ["derive"] }
itertools = "0.13"
nalgebra = "0.33"

[dev-dependencies]
rand = "0.8.5"
bevy_flycam = "0.15.0"
